--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,7 @@
-VITE_APIKEY=
-VITE_AUTHDOMAIN=
-VITE_PROJECTID=
-VITE_STORAGEBUCKET=
-VITE_MESSAGINGSENDERID=
-VITE_APPID=
+VITE_APIKEY=AIzaSyBWnMmMZBuuNsmHtA99ElDI2BYuGLsVsRo
+VITE_AUTHDOMAIN=fh-react-cursos-test.firebaseapp.com
+VITE_PROJECTID=fh-react-cursos-test
+VITE_STORAGEBUCKET=fh-react-cursos-test.appspot.com
+VITE_MESSAGINGSENDERID=328765789246
+VITE_APPID=1:328765789246:web:14e343885e67413b032d6f
+VITE_MESUREMENTID=G-JVMPMBPJHK
